# adtime-backend-mvp

./: .dockerignore  .env.template  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  postgresql.conf  redis.conf  requirements.txt  traffic_bombardment.sh  update-images.sh
backend/: API_DOCUMENTATION.html  Dockerfile  README.md  alembic.ini  api_documentation.py  list_routes.py  migrate.py  private.pem  public.pem  pyproject.toml  requirements-dev.txt  requirements.txt  run_migrations.py  run_migrations.sh
backend/app/: main.py
backend/app/core/: chat.py  config.py  currency.py  database.py  dependencies.py  errors.py  factory_client.py  metrics.py  order_status.py  password_validation.py  rate_limiter.py  redis.py  responses.py  retry.py  security.py  statuses.py  storage.py  testing.py  webhook_validation.py  webhooks.py  websocket_manager.py
backend/app/models/: __init__.py  base.py  chat.py  factory.py  generation.py  marketplace.py  notifications.py  order.py  payment.py  review.py  subscription.py  user.py
backend/app/repositories/: __init__.py  base.py  chat.py  factory.py  generation.py  marketplace.py  notification.py  order.py  payment.py  subscription.py  user.py
backend/app/schemas/: __init__.py  admin.py  auth.py  balance.py  errors.py  generation.py  marketplace.py  notifications.py  order.py  user.py  (+3 more)
backend/migrations/: env.py
backend/templates/: test_oauth.html  test_payments.html
backend/tests/: conftest.py  sql_injection_test.py  test_oauth.py  test_order.py  test_payments.py  test_pepper.py  test_production.py
(+58 files in other folders)
